Fixed bug #38891 (get_headers() do not work with curl-wrappers).